--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -15,6 +15,10 @@
   margin: 0;
   box-sizing: border-box;
 }
+*:focus,
+*:active {
+  outline: none;
+}
 
 // scrollbar
 ::-webkit-scrollbar-track {
